--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,10 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/HomeFragment">
 
+    <action
+        android:id="@+id/action_to_DetailsFragment"
+        app:destination="@id/DetailsFragment" />
+
     <fragment
         android:id="@+id/HomeFragment"
         android:name="com.example.aplikasi_gamedex.HomeFragment"
@@ -12,17 +16,25 @@
         tools:layout="@layout/fragment_home">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_HomeFragment_to_SalesFragment"
+            app:destination="@id/SalesFragment" />
+
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.aplikasi_gamedex.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        android:id="@+id/SalesFragment"
+        android:name="com.example.aplikasi_gamedex.SalesFragment"
+        android:label="@string/sales_fragment_label"
+        tools:layout="@layout/fragment_sales">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            android:id="@+id/action_SalesFragment_to_HomeFragment"
             app:destination="@id/HomeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/DetailsFragment"
+        android:name="com.example.aplikasi_gamedex.DetailsFragment"
+        android:label="@string/details_fragment_label"
+        tools:layout="@layout/fragment_details" >
+
     </fragment>
 </navigation>
