--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/HomeFragment"
-        android:icon="@drawable/homeicon"
-        android:title="@string/home_fragment_label" />
-    <item
         android:id="@+id/SalesFragment"
         android:icon="@drawable/salesicon"
         android:title="@string/sales_fragment_label" />
@@ -13,7 +9,7 @@
         android:icon="@drawable/favicon"
         android:title="@string/favorite_fragment_label" />
     <item
-        android:id="@+id/FourthFragment"
+        android:id="@+id/SettingsFragment"
         android:icon="@drawable/settingsicon"
         android:title="@string/settings_fragment_label" />
 </menu>
