--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -75,7 +75,7 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
-            android:backgroundTint="#007AFF"
+            android:backgroundTint="#4BCDE2"
             android:text="Steam"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="68dp"
             android:text="Epic Games"
-            android:backgroundTint="#007AFF"
+            android:backgroundTint="#4BCDE2"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
@@ -131,7 +131,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="124dp"
             android:text="Good Old Games (GOG)"
-            android:backgroundTint="#007AFF"
+            android:backgroundTint="#4BCDE2"
             android:textAlignment="textEnd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
