--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -57,11 +57,26 @@
 
                 <TextView
                     android:id="@+id/tvNormalPrice"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"/>
             </LinearLayout>
+            <TextView
+                android:id="@+id/tvSavings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#549159"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/discount_bg"
+                android:paddingStart="6dp"
+                android:paddingEnd="6dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
