--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -36,12 +36,24 @@
                 android:maxLines="2"
                 android:ellipsize="end"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="6dp">
+
+            <ImageView
+                android:id="@+id/imgStore"
+                android:layout_width="14dp"
+                android:layout_height="14dp"/>
+
             <TextView
                 android:id="@+id/tvStore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="4dp"
                 android:textSize="12sp"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -62,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="12sp"/>
             </LinearLayout>
+
             <TextView
                 android:id="@+id/tvSavings"
                 android:layout_width="wrap_content"
