--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/SplashFragment">
+    app:startDestination="@id/HomeFragment">
 
     <fragment
         android:id="@+id/HomeFragment"
@@ -25,39 +25,20 @@
         <action
             android:id="@+id/action_SalesFragment_to_HomeFragment"
             app:destination="@id/HomeFragment" />
+        <!-- TAMBAHKAN ACTION INI KEMBALI -->
+        <action
+            android:id="@+id/action_SalesFragment_to_DetailsFragment"
+            app:destination="@id/DetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/DetailsFragment"
         android:name="com.example.aplikasi_gamedex.DetailsFragment"
         android:label="@string/details_fragment_label"
-        tools:layout="@layout/fragment_details" >
-
-    </fragment>
-    <fragment
-        android:id="@+id/SettingsFragment"
-        android:name="com.example.aplikasi_gamedex.SettingsFragment"
-        android:label="@string/settings_fragment_label" />
-    <fragment
-        android:id="@+id/SplashFragment"
-        android:name="com.example.aplikasi_gamedex.SplashFragment"
-        android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
-        <action
-            android:id="@+id/action_SplashFragment_to_ViewPagerFragment"
-            app:destination="@id/ViewPagerFragment"
-            app:popUpTo="@id/SplashFragment" />
-        <action
-            android:id="@+id/action_SplashFragment_to_SalesFragment"
-            app:destination="@id/SalesFragment"
-            app:popUpTo="@id/SplashFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/ViewPagerFragment"
-        android:name="com.example.aplikasi_gamedex.onboarding.ViewPagerFragment"
-        android:label="ViewPagerFragment" >
-        <action
-            android:id="@+id/action_ViewPagerFragment_to_SalesFragment"
-            app:destination="@id/SalesFragment"
-            app:popUpTo="@id/ViewPagerFragment" />
+        tools:layout="@layout/fragment_detail_game" >
+        <!-- TAMBAHKAN ARGUMEN INI KEMBALI -->
+        <argument
+            android:name="gameID"
+            app:argType="string"
+            android:defaultValue="" />
     </fragment>
 </navigation>
