--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -7,14 +7,26 @@
     android:padding="16dp"
     tools:context=".SalesFragment">
 
-    <!-- FILTER BUTTONS (Pengganti ChipGroup) -->
+    <!-- SEARCH BAR -->
+    <SearchView
+        android:id="@+id/searchBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:queryHint="Cari game..."
+        android:iconifiedByDefault="false"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- FILTER BUTTONS -->
     <LinearLayout
         android:id="@+id/filterContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
