--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,60 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".SettingsFragment">
 
+    <!-- Judul -->
+    <TextView
+        android:id="@+id/tvTema"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tema Aplikasi"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="40dp" />
+
+    <!-- Tombol Mode Terang -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLightMode"
-        android:layout_width="195dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="170dp"
-        android:background="@drawable/lightmode_button"
         android:text="Mode Terang"
         android:textColor="@color/black"
+        android:background="@drawable/lightmode_button"
         app:backgroundTint="@null"
         app:cornerRadius="24dp"
         app:icon="@drawable/lightmodeicon"
         app:iconSize="24dp"
         app:iconTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.152"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTema"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.102" />
+        app:layout_constraintEnd_toStartOf="@id/btnDarkMode" />
 
+    <!-- Tombol Mode Gelap -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDarkMode"
-        android:layout_width="180dp"
-        android:layout_height="59dp"
-        android:background="@drawable/darkmode_button"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:text="Mode Gelap"
         android:textColor="@color/white"
+        android:background="@drawable/darkmode_button"
         app:backgroundTint="@null"
         app:cornerRadius="24dp"
         app:icon="@drawable/darkmodeicon"
         app:iconSize="24dp"
         app:iconTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.969"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.102"
-        app:strokeColor="@color/design_default_color_on_primary"
-        app:strokeWidth="2dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="203dp"
-        android:layout_height="41dp"
-        android:gravity="center"
-        android:paddingLeft="10dp"
-        android:text="Tema Aplikasi"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.034" />
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="12dp"
+        app:strokeColor="@color/white"
+        app:strokeWidth="2dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTema"
+        app:layout_constraintStart_toEndOf="@id/btnLightMode"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
