--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +9,21 @@
     tools:context=".SalesFragment">
 
     <!-- SEARCH BAR -->
+
+    <!-- FILTER BUTTONS -->
+
     <SearchView
         android:id="@+id/searchBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:queryHint="Cari game..."
+        android:layout_marginTop="64dp"
         android:iconifiedByDefault="false"
-        app:layout_constraintTop_toTopOf="parent"
+        android:queryHint="Cari game..."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- FILTER BUTTONS -->
     <LinearLayout
         android:id="@+id/filterContainer"
         android:layout_width="0dp"
@@ -30,41 +35,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <Button
-            android:id="@+id/btnSteam"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/filter_button_background"
-            android:drawableLeft="@drawable/steamlogoicon_filter"
-            android:text="Steam"
-            android:textAlignment="textEnd"
-            android:textColor="@drawable/filter_button_text_color"
-            app:backgroundTint="@null" />
-
-        <Button
-            android:id="@+id/btnGOG"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/filter_button_background"
-            android:drawableLeft="@drawable/goggameslogoicon_filter"
-            android:text="GOG"
-            android:textAlignment="textEnd"
-            android:textColor="@drawable/filter_button_text_color"
-            app:backgroundTint="@null" />
-
-        <Button
-            android:id="@+id/btnEpic"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/filter_button_background"
-            android:drawableLeft="@drawable/epicgameslogoicon_filter"
-            android:text="Epic"
-            android:textAlignment="textEnd"
-            android:textColor="@drawable/filter_button_text_color"
-            app:backgroundTint="@null" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnGOG"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/filter_button_background"
+        android:drawableLeft="@drawable/goggameslogoicon_filter"
+        android:text="GOG"
+        android:textAlignment="textEnd"
+        android:textColor="@drawable/filter_button_text_color"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toTopOf="@+id/recycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar"
+        app:layout_constraintVertical_bias="0.965" />
+
+    <Button
+        android:id="@+id/btnSteam"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/filter_button_background"
+        android:drawableLeft="@drawable/steamlogoicon_filter"
+        android:text="Steam"
+        android:textAlignment="textEnd"
+        android:textColor="@drawable/filter_button_text_color"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toTopOf="@+id/recycler"
+        app:layout_constraintEnd_toStartOf="@+id/btnGOG"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
+    <Button
+        android:id="@+id/btnEpic"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/filter_button_background"
+        android:drawableLeft="@drawable/epicgameslogoicon_filter"
+        android:text="Epic"
+        android:textAlignment="textEnd"
+        android:textColor="@drawable/filter_button_text_color"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toTopOf="@+id/recycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/btnGOG"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <!-- PROGRESS -->
     <ProgressBar
@@ -72,7 +99,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:visibility="gone"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="350dp"
         app:layout_constraintTop_toBottomOf="@id/filterContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -80,13 +107,30 @@
     <!-- RECYCLER -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingTop="6dp"
+        android:layout_width="374dp"
+        android:layout_height="511dp"
+        android:layout_marginTop="90dp"
         android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/progress"
-        app:layout_constraintStart_toStartOf="parent"
+        android:paddingTop="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
