--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -16,7 +16,7 @@
         android:id="@+id/searchBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="70dp"
         android:iconifiedByDefault="false"
         android:queryHint="Cari game..."
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,6 @@
         android:id="@+id/btnGOG"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
         android:background="@drawable/filter_button_background"
         android:drawableLeft="@drawable/goggameslogoicon_filter"
         android:text="GOG"
@@ -50,18 +49,14 @@
         app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/recycler"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar"
-        app:layout_constraintVertical_bias="0.965" />
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <Button
         android:id="@+id/btnSteam"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="52dp"
         android:background="@drawable/filter_button_background"
         android:drawableLeft="@drawable/steamlogoicon_filter"
         android:text="Steam"
@@ -78,9 +73,6 @@
         android:id="@+id/btnEpic"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="52dp"
         android:background="@drawable/filter_button_background"
         android:drawableLeft="@drawable/epicgameslogoicon_filter"
         android:text="Epic"
@@ -89,7 +81,7 @@
         app:backgroundTint="@null"
         app:layout_constraintBottom_toTopOf="@+id/recycler"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toEndOf="@+id/btnGOG"
         app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
@@ -109,7 +101,7 @@
         android:id="@+id/recycler"
         android:layout_width="374dp"
         android:layout_height="511dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="110dp"
         android:clipToPadding="false"
         android:paddingTop="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
