--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:iconifiedByDefault="false"
-        android:queryHint="Cari game..."
+        android:queryHint="Search game..."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
