--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/lightmode_button"
-        android:text="Mode Terang"
+        android:text="Light Mode"
         android:textColor="@color/black"
         app:backgroundTint="@null"
         app:cornerRadius="24dp"
@@ -46,7 +46,7 @@
         android:id="@+id/btnDarkMode"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:text="Mode Gelap"
+        android:text="Dark Mode"
         android:textColor="@color/white"
         android:background="@drawable/darkmode_button"
         app:backgroundTint="@null"
