--- a/app/src/main/res/layout/item_favorite_game.xml
+++ b/app/src/main/res/layout/item_favorite_game.xml
@@ -58,6 +58,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="4dp"
+            app:tint="#ff0000"
             android:background="@android:color/transparent"
             android:src="@android:drawable/btn_star_big_off"
             android:contentDescription="remove favorite"/>
